--- a/index.html
+++ b/index.html
@@ -4,15 +4,66 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/style.css" />
-    <title>Vite + TS</title>
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <title>CSV to JSON</title>
   </head>
   <body>
-    <label for="file">File</label>
-    <input type="file" id="file" />
+    <div id="parse-card-container">
+      <h1 id="form-title">CSV to JSON</h1>
 
-    <textarea id="textarea" style="display: block"></textarea>
+      <div id="parse-card">
+        <form id="csv-form">
+          <label for="csv-file" id="label-csv-file">
+            <input type="file" id="csv-file" name="csv-file" accept=".csv" />
+            <span class="material-symbols-outlined" id="csv-upload-icon">
+              upload
+            </span>
+            Upload your CSV file
+          </label>
 
+          <div id="selected-file">
+            <div id="file-item">
+              <div id="file-item-title-container">
+                <span class="material-symbols-outlined"> draft </span>
+                <p id="file-item-title"></p>
+              </div>
+              <p id="file-size"></p>
+            </div>
+          </div>
+
+          <button type="submit">Converter</button>
+        </form>
+
+        <div id="results">
+          <div id="progress-bar-container">
+            <p id="status">Processing...</p>
+            <div id="progress-container">
+              <progress id="progress" value="0" max="100"></progress>
+              <span id="progress-label">0%</span>
+            </div>
+            <p id="compile-label"></p>
+            <p id="time-elapsed"></p>
+          </div>
+
+          <a href="" id="download-json">
+            <button>
+              <span class="material-symbols-outlined"> download </span>
+              Download JSON
+            </button>
+          </a>
+        </div>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
